# interactive-cg-ch2

./: CMakeLists.txt  Node.cpp  Node.h  Scene.cpp  Scene.h  color_and_cmt.vert  color_and_lightning.frag  color_and_lightning.vert  color_cmt_and_textures.vert  color_cube.cpp  environment_mapped_cube.cpp  flat_color_text.frag  main.cpp  orto.vert  orto_colors.vert  recursive_sphere.cpp  siaerpisky_2d_triangles.cpp  sierpisky_3d_color_triangles.cpp  textured_color_cube.cpp  utils.cpp  utils.h
shaders/: color_and_cmt.vert  color_and_lightning_with_bump.vert  color_cmt_and_textures.vert  env_cube_map.frag  env_cube_map.vert  flat_color.frag  flat_color_text.frag  orto.vert
